--- a/requirements.txt
+++ b/requirements.txt
@@ -1,127 +1,1 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
-alpaca-trade-api==2.3.0
-anyio==3.6.1
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.8
-async-timeout==4.0.2
-attrs==22.1.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
-bleach==5.0.1
-cdist==7.0.0
-certifi==2022.9.24
-cffi==1.15.1
-charset-normalizer==2.1.1
-colorama==0.4.5
-contourpy==1.0.7
-cycler==0.11.0
-debugpy==1.6.3
-decorator==5.1.1
-defusedxml==0.7.1
-deprecation==2.1.0
-distlib==0.3.6
-entrypoints==0.4
-executing==1.1.1
-fastjsonschema==2.16.2
-ffmpeg==1.4
-filelock==3.8.0
-fonttools==4.38.0
-frozenlist==1.3.1
-idna==3.4
-imutils==0.5.4
-inflection==0.5.1
-ipykernel==6.16.0
-ipython==8.5.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.2
-jedi==0.18.1
-Jinja2==3.1.2
-joblib==1.2.0
-jsonschema==4.16.0
-jupyter==1.0.0
-jupyter-console==6.4.4
-jupyter-core==4.11.1
-jupyter-server==1.21.0
-jupyter_client==7.4.2
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.3
-kaggle==1.5.13
-kiwisolver==1.4.4
-MarkupSafe==2.1.1
-matplotlib==3.7.0
-matplotlib-inline==0.1.6
-mistune==2.0.4
-more-itertools==9.0.0
-MouseInfo==0.1.3
-msgpack==1.0.3
-multidict==6.0.2
-Nasdaq-Data-Link==1.0.4
-nbclassic==0.4.5
-nbclient==0.7.0
-nbconvert==7.2.1
-nbformat==5.7.0
-nest-asyncio==1.5.6
-networkx==3.0
-notebook==6.5.1
-notebook_shim==0.2.0
-numpy==1.23.4
-opencv-python==4.6.0.66
-packaging==21.3
-pandas==1.5.1
-pandocfilters==1.5.0
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==9.2.0
-platformdirs==2.5.3
-prometheus-client==0.15.0
-prompt-toolkit==3.0.31
-psutil==5.9.2
-pure-eval==0.2.2
-PyAutoGUI==0.9.53
-pycparser==2.21
-PyGetWindow==0.0.9
-Pygments==2.13.0
-PyMsgBox==1.0.9
-pyparsing==3.0.9
-pyperclip==1.8.2
-PyRect==0.2.0
-pyrsistent==0.18.1
-PyScreeze==0.1.28
-python-dateutil==2.8.2
-python-slugify==8.0.1
-pytweening==1.0.4
-pytz==2022.6
-pywin32==304
-pywinpty==2.0.8
-PyYAML==6.0
-pyzmq==24.0.1
-qtconsole==5.3.2
-QtPy==2.2.1
-Quandl==3.7.0
-requests==2.28.1
-scikit-learn==1.1.2
-scipy==1.9.2
-Send2Trash==1.8.0
-six==1.16.0
-sklearn==0.0.post1
-sniffio==1.3.0
-soupsieve==2.3.2.post1
-stack-data==0.5.1
-terminado==0.16.0
-text-unidecode==1.3
-threadpoolctl==3.1.0
-timeframe==0.2.1
-tinycss2==1.2.1
-tornado==6.2
-tqdm==4.65.0
-traitlets==5.5.0
-urllib3==1.26.12
-virtualenv==20.16.6
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==1.4.1
-websockets==10.4
-widgetsnbextension==4.0.3
-yarl==1.8.1
+flask
