--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ Jinja2==3.1.3
 MarkupSafe==2.1.5
 psycopg2-binary==2.9.9
 python-decouple==3.8
+python-dotenv==1.0.1
 Werkzeug==3.0.1
-gunicorn==19.7.1
