--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
+blinker==1.7.0
 click==8.1.3
 Flask==2.2.2
+Flask-Cors==4.0.0
 Flask-SQLAlchemy==3.0.2
 greenlet==2.0.1
 gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+packaging==24.0
 psycopg2-binary==2.9.5
+python-decouple==3.8
+python-dotenv==1.0.1
 SQLAlchemy==1.4.46
 Werkzeug==2.2.2
